<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Keyguard</string>
    <string name="keyguard_password_enter_pin_code">Type PIN code</string>
    <string name="keyguard_password_enter_puk_code">Type SIM PUK and new PIN code</string>
    <string name="keyguard_password_enter_puk_prompt">SIM PUK code</string>
    <string name="keyguard_password_enter_pin_prompt">New SIM PIN code</string>
    <string name="keyguard_password_entry_touch_hint"><font size="17">Touch to type password</font></string>
    <string name="keyguard_password_enter_password_code">Type password to unlock</string>
    <string name="keyguard_password_enter_pin_password_code">Type PIN to unlock</string>
    <string name="keyguard_password_wrong_pin_code">Incorrect PIN code.</string>
    <string name="lockscreen_sim_error_message_short">Invalid Card.</string>
    <string name="keyguard_charged">Charged</string>
    <string name="keyguard_plugged_in">Charging</string>
    <string name="keyguard_plugged_in_charging_fast">Charging rapidly</string>
    <string name="keyguard_plugged_in_charging_slowly">Charging slowly</string>
    <string name="keyguard_low_battery">Connect your charger.</string>
    <string name="keyguard_instructions_when_pattern_disabled">Press Menu to unlock.</string>
    <string name="keyguard_network_locked_message">Network locked</string>
    <string name="keyguard_missing_sim_message_RJIL">No SIM</string>
    <string name="keyguard_missing_sim_message_short">No SIM card</string>
    <string name="keyguard_missing_sim_message" product="default">No SIM card in phone.</string>
    <string name="keyguard_missing_sim_instructions">Insert a SIM card.</string>
    <string name="keyguard_missing_sim_instructions_long">The SIM card is missing or not readable. Insert a SIM card.</string>
    <string name="keyguard_permanent_disabled_sim_message_short">Unusable SIM card.</string>
    <string name="keyguard_permanent_disabled_sim_instructions">Your SIM card has been permanently disabled.\n
    Contact your wireless service provider for another SIM card.</string>
    <string name="keyguard_sim_locked_message">SIM card is locked.</string>
    <string name="keyguard_sim_puk_locked_message">SIM card is PUK-locked.</string>
    <string name="keyguard_sim_unlock_progress_dialog_message">Unlocking SIM card\u2026</string>
    <string name="keyguard_widget_12_hours_format" translatable="false">h\uee01mm</string>
    <string name="keyguard_widget_24_hours_format" translatable="false">kk\uee01mm</string>
    <string name="keyguard_accessibility_pin_area">PIN area</string>
    <string name="keyguard_accessibility_sim_pin_area">SIM PIN area</string>
    <string name="keyguard_accessibility_sim_puk_area">SIM PUK area</string>
    <string name="keyguard_accessibility_next_alarm">Next alarm set for <xliff:g id="alarm" example="Fri 8:30 AM">%1$s</xliff:g></string>
    <string name="keyboardview_keycode_delete">Delete</string>
    <string name="keyboardview_keycode_enter">Enter</string>
    <string name="kg_forgot_pattern_button_text">Forgot Pattern</string>
    <string name="kg_wrong_pattern">Wrong Pattern</string>
    <string name="kg_wrong_password">Wrong Password</string>
    <string name="kg_wrong_pin">Wrong PIN</string>
    <string name="kg_too_many_failed_attempts_countdown">Try again in <xliff:g id="number">%d</xliff:g> seconds.</string>
    <string name="kg_pattern_instructions">Draw your pattern</string>
    <string name="kg_sim_pin_instructions">Enter SIM PIN</string>
    <string name="kg_sim_pin_instructions_multi">Enter SIM PIN for \"<xliff:g id="carrier" example="CARD 1">%1$s</xliff:g>\"</string>
    <string name="kg_pin_instructions">Enter PIN</string>
    <string name="kg_password_instructions">Enter Password</string>
    <string name="kg_puk_enter_puk_hint">SIM is now disabled. Enter PUK code to continue. Contact carrier for details.</string>
    <string name="kg_puk_enter_puk_hint_multi">SIM \"<xliff:g id="carrier" example="CARD 1">%1$s</xliff:g>\" is now disabled. Enter PUK code to continue. Contact carrier for details.</string>
    <string name="kg_puk_enter_pin_hint">Enter desired PIN code</string>
    <string name="kg_enter_confirm_pin_hint">Confirm desired PIN code</string>
    <string name="kg_sim_unlock_progress_dialog_message">Unlocking SIM card\u2026</string>
    <string name="kg_invalid_sim_pin_hint">Type a PIN that is 4 to 8 numbers.</string>
    <string name="kg_invalid_sim_puk_hint">PUK code should be 8 numbers or more.</string>
    <string name="kg_invalid_puk">Re-enter the correct PUK code. Repeated attempts will permanently disable the SIM.</string>
    <string name="kg_invalid_confirm_pin_hint" product="default">PIN codes does not match</string>
    <string name="kg_login_too_many_attempts">Too many pattern attempts</string>
    <string name="kg_too_many_failed_pin_attempts_dialog_message">
        You have incorrectly typed your PIN <xliff:g id="number">%1$d</xliff:g> times.
        \n\nTry again in <xliff:g id="number">%2$d</xliff:g> seconds.
    </string>
    <string name="kg_too_many_failed_password_attempts_dialog_message">
        You have incorrectly typed your password <xliff:g id="number">%1$d</xliff:g> times.
        \n\nTry again in <xliff:g id="number">%2$d</xliff:g> seconds.
    </string>
    <string name="kg_too_many_failed_pattern_attempts_dialog_message">
        You have incorrectly drawn your unlock pattern <xliff:g id="number">%1$d</xliff:g> times.
        \n\nTry again in <xliff:g id="number">%2$d</xliff:g> seconds.
    </string>
    <string name="kg_failed_attempts_almost_at_wipe" product="default">
       You have incorrectly attempted to unlock the phone <xliff:g id="number">%1$d</xliff:g> times.
       After <xliff:g id="number">%2$d</xliff:g> more unsuccessful attempts,
       this phone will be reset, which will delete all its data.
    </string>
    <string name="kg_failed_attempts_now_wiping" product="default">
       You have incorrectly attempted to unlock the phone <xliff:g id="number">%d</xliff:g> times.
       This phone will be reset, which will delete all its data.
    </string>
    <string name="kg_failed_attempts_almost_at_erase_user" product="default">
       You have incorrectly attempted to unlock the phone <xliff:g id="number">%1$d</xliff:g> times.
       After <xliff:g id="number">%2$d</xliff:g> more unsuccessful attempts,
       this user will be removed, which will delete all user data.
    </string>
    <string name="kg_failed_attempts_now_erasing_user" product="default">
       You have incorrectly attempted to unlock the phone <xliff:g id="number">%d</xliff:g> times.
       This user will be removed, which will delete all user data.
    </string>
    <string name="kg_failed_attempts_almost_at_erase_profile" product="default">
       You have incorrectly attempted to unlock the phone <xliff:g id="number">%1$d</xliff:g> times.
       After <xliff:g id="number">%2$d</xliff:g> more unsuccessful attempts,
       the work profile will be removed, which will delete all profile data.
    </string>
    <string name="kg_failed_attempts_now_erasing_profile" product="default">
       You have incorrectly attempted to unlock the phone <xliff:g id="number">%d</xliff:g> times.
       The work profile will be removed, which will delete all profile data.
    </string>
    <string name="kg_failed_attempts_almost_at_login" product="default">
       You have incorrectly drawn your unlock pattern <xliff:g id="number">%1$d</xliff:g> times.
       After <xliff:g id="number">%2$d</xliff:g> more unsuccessful attempts,
       you will be asked to unlock your phone using an email account.\n\n
       Try again in <xliff:g id="number">%3$d</xliff:g> seconds.
    </string>
    <string name="kg_password_wrong_pin_code_pukked">Incorrect SIM PIN code you must now contact your carrier to unlock your device.</string>
    <plurals name="kg_password_wrong_pin_code">
        <item quantity="one">Incorrect SIM<xliff:g id="slotid">%d</xliff:g> PIN code, you have <xliff:g id="number">%d</xliff:g> remaining attempt before you must contact your carrier to unlock your device.</item>
        <item quantity="other">Incorrect SIM<xliff:g id="slotid">%d</xliff:g> PIN code, you have <xliff:g id="number">%d</xliff:g> remaining attempts.</item>
    </plurals>
    <string name="kg_password_wrong_puk_code_dead">SIM is unusable. Contact your carrier.</string>
    <plurals name="kg_password_wrong_puk_code">
        <item quantity="one">Incorrect SIM PUK code, you have <xliff:g id="number">%d</xliff:g> remaining attempt before SIM becomes permanently unusable.</item>
        <item quantity="other">Incorrect SIM PUK code, you have <xliff:g id="number">%d</xliff:g> remaining attempts before SIM becomes permanently unusable.</item>
    </plurals>
    <string name="kg_password_pin_failed">SIM PIN operation failed!</string>
    <string name="kg_password_puk_failed">SIM PUK operation failed!</string>
    <string name="kg_pin_accepted">Code Accepted!</string>
    <string name="keyguard_carrier_default">No service.</string>
    <string name="kg_remaining_attempts">Remaining attempts: <xliff:g id="number">%d</xliff:g></string>
    <string name="kg_failed_pin_attempts_now_wiping">
        You entered the wrong PIN <xliff:g id="number">%d</xliff:g> times,
        do you want to reset your phone to factory settings?
    </string>
    <string name="kg_failed_password_attempts_now_wiping">
        You entered the wrong Password <xliff:g id="number">%d</xliff:g> times,
        do you want to reset your phone to factory settings?
    </string>
    <string name="kg_failed_pattern_attempts_now_wiping">
        You entered the wrong Pattern <xliff:g id="number">%d</xliff:g> times,
        do you want to reset your phone to factory settings?
    </string>
    <string name="kg_failed_attempts_now_wiping_confirm">
        This will erase all data from your device\'s internal storage and your device will be back to factory settings.
    </string>
    <string name="accessibility_ime_switch_button" msgid="5032926134740456424">Switch input method</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="kg_prompt_reason_restart_pattern">Pattern required after device restarts</string>
    <string name="kg_prompt_reason_restart_pin">PIN required after device restarts</string>
    <string name="kg_prompt_reason_restart_password">Password required after device restarts</string>
    <string name="kg_prompt_reason_timeout_pattern">Pattern required for additional security</string>
    <string name="kg_prompt_reason_timeout_pin">PIN required for additional security</string>
    <string name="kg_prompt_reason_timeout_password">Password required for additional security</string>
    <string name="kg_prompt_reason_switch_profiles_pattern">Pattern required when you switch profiles</string>
    <string name="kg_prompt_reason_switch_profiles_pin">PIN required when you switch profiles</string>
    <string name="kg_prompt_reason_switch_profiles_password">Password required when you switch profiles</string>
    <string name="kg_prompt_reason_device_admin">Device administrator locked device</string>
    <string name="kg_prompt_reason_user_request">Device was locked manually</string>
    <string name="kg_subsidy_title_locked">Device Locked</string>
    <string name="kg_subsidy_content_locked">
        Please insert a valid SIM to unlock the device.\n\nTap to unlock after making sure that connection to data network(cellular or Wi-Fi) is active.</string>
    <string name="kg_button_unlock">Unlock</string>
    <string name="kg_subsidy_setup_wifi">Setup Wi-Fi</string>
    <string name="kg_subsidy_enable_data">Enable Data</string>
    <string name="kg_subsidy_no_data_connection">No Data connection, To enable data, use options below</string>
</resources>