<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (c) 2017, The Linux Foundation. All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are
 * met:
 *      * Redistributions of source code must retain the above copyright
 *        notice, this list of conditions and the following disclaimer.
 *      * Redistributions in binary form must reproduce the above
 *        copyright notice, this list of conditions and the following
 *        disclaimer in the documentation and/or other materials provided
 *        with the distribution.
 *      * Neither the name of The Linux Foundation nor the names of its
 *        contributors may be used to endorse or promote products derived
 *        from this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED
 * WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
 * MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT
 * ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS
 * BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
 * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
 * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
 * BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
 * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 * OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 * IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->

<com.android.keyguard.KeyguardSubsidyPinView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidprv="http://schemas.android.com/apk/res-auto"
    android:id="@+id/keyguard_subsidy_pin_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    androidprv:layout_maxHeight="@dimen/keyguard_security_max_height"
    androidprv:layout_maxWidth="@dimen/keyguard_security_width"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/keyguard_message_area" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layoutDirection="ltr"
        android:orientation="vertical" >

        <com.android.keyguard.AlphaOptimizedRelativeLayout
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="16dp" >

            <com.android.keyguard.PasswordTextView
                android:id="@+id/subsidy_pinEntry"
                android:layout_width="@dimen/keyguard_security_width"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="72dp"
                android:contentDescription="@string/keyguard_accessibility_pin_area"
                android:gravity="center"
                androidprv:scaledTextSize="28" />

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignEnd="@+id/subsidy_pinEntry"
                android:layout_alignParentRight="true"
                android:background="@drawable/ripple_drawable"
                android:clickable="true"
                android:contentDescription="@string/keyboardview_keycode_delete"
                android:gravity="center_vertical"
                android:paddingBottom="8dip"
                android:paddingLeft="24dp"
                android:paddingRight="8dp"
                android:paddingTop="8dip"
                android:src="@drawable/ic_backspace_24dp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#28FFFFFF" />
        </com.android.keyguard.AlphaOptimizedRelativeLayout>

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <com.android.keyguard.NumPadKey
                android:id="@+id/key1"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                androidprv:digit="1"
                androidprv:textView="@+id/subsidy_pinEntry" />

            <com.android.keyguard.NumPadKey
                android:id="@+id/key2"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                androidprv:digit="2"
                androidprv:textView="@+id/subsidy_pinEntry" />

            <com.android.keyguard.NumPadKey
                android:id="@+id/key3"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                androidprv:digit="3"
                androidprv:textView="@+id/subsidy_pinEntry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <com.android.keyguard.NumPadKey
                android:id="@+id/key4"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                androidprv:digit="4"
                androidprv:textView="@+id/subsidy_pinEntry" />

            <com.android.keyguard.NumPadKey
                android:id="@+id/key5"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                androidprv:digit="5"
                androidprv:textView="@+id/subsidy_pinEntry" />

            <com.android.keyguard.NumPadKey
                android:id="@+id/key6"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                androidprv:digit="6"
                androidprv:textView="@+id/subsidy_pinEntry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <com.android.keyguard.NumPadKey
                android:id="@+id/key7"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                androidprv:digit="7"
                androidprv:textView="@+id/subsidy_pinEntry" />

            <com.android.keyguard.NumPadKey
                android:id="@+id/key8"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                androidprv:digit="8"
                androidprv:textView="@+id/subsidy_pinEntry" />

            <com.android.keyguard.NumPadKey
                android:id="@+id/key9"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                androidprv:digit="9"
                androidprv:textView="@+id/subsidy_pinEntry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.android.keyguard.NumPadKey
                android:id="@+id/key0"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                androidprv:digit="0"
                androidprv:textView="@+id/subsidy_pinEntry" />

            <com.android.keyguard.AlphaOptimizedImageButton
                android:id="@+id/key_enter"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_drawable"
                android:contentDescription="@string/keyboardview_keycode_enter"
                android:paddingBottom="11sp"
                android:src="@drawable/ic_done_wht" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/keyguard_selector_fade_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        layout="@layout/keyguard_eca"
        android:gravity="center_horizontal"
        android:orientation="vertical" />

</com.android.keyguard.KeyguardSubsidyPinView>
